--- a/index.css
+++ b/index.css
@@ -67,3 +67,21 @@ body {
     height: 40px;
     width: 150px;
 }
+
+.vidas {
+    display: flex;
+    gap: 5px;
+    margin-top: 20px;
+    justify-content: center;
+}
+
+.corazon {
+    width: 30px;
+    height: 30px;
+    background-image: url('img/Corazon.png');
+    background-size: cover;
+}
+
+.corazon.vacio {
+    background-image: url('img/Corazon-vacio.png');
+}
